--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-04-20  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/Makefile.win ($(SHLIB)): Modifications per Uwe Ligges.
+
+2004-04-19  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/ssclme.c (ssclme_update_mm): fix logic error in
+	ssclme_update_mm
+
+2004-04-18  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/ssclme.c (ssclme_coef, ssclme_coefGets): Create consistency
+	in the order of unconstrained and constrained parameters.
+	(ssclme_gradient): Added the gradients (not yet correct for
+	multidimensional, unconstrained case).
+
 2004-04-14  Douglas Bates  <bates@stat.wisc.edu>
 
 	* src/ssclme.c (ssclme_EMsteps): Fix logic in REML update
