--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-10-27  Douglas Bates  <bates@bates1-home>
+
+	* R/pdmatrix.R: remove PACKAGE="Matrix" in .Call calls
+
+2004-10-04  Douglas Bates  <bates@bates1-home>
+
+	* src/init.c: Created R_init_Matrix and added registration of C
+	routines.
+
 2004-10-02  Douglas Bates  <bates@bates1-home>
 
 	* R/tripletMatrix.R: Force a require(lattice) for the image methods.
