--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-01-03  Douglas Bates  <bates@bates1-home>
+
+	* src/lmeRep.c (lmer_variances): change from lmeRep to lmer
+
+2004-12-23  Douglas Bates  <bates@bates1-home>
+
+	* src/init.c (R_init_Matrix): Reorder calls to R_registerRoutines
+	and R_useDynamicSymbols (suggested by B.D.Ripley).
+
 2004-12-14  Douglas Bates  <bates@bates1-home>
 
 	* R/sscMatrix.R: Add determinant methods
