--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-02  Douglas Bates  <bates@bates1-home>
+
+	* src/Makefile.win: Forgot to update this when Makefile changed.
+
 2005-05-11  Douglas Bates  <bates@bates1-home>
 
 	* src/dgCMatrix.c (csc_transpose): Simplified function fixing a
